--- a/index.html
+++ b/index.html
@@ -4,21 +4,94 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Domowy budżet</title>
   </head>
   <body>
-    <script src="./project1.js"></script>
+    <div class="container">
+      <div class="header">
+        <img src="./img/iconmonstr-banknote-20-120.png" class="logo" />
+
+        <!-- SUM BUDGET -->
+        <div>
+          <h1 id="main-sum">Twój budżet</h1>
+        </div>
+      </div>
+
+      <!-- INCOMES AND EXPENSES -->
+      <div class="row">
+        <!-- INCOME-->
+        <div class="col">
+          <div id="income">
+            <h2>Dochód</h2>
+
+            <p class="saldo">
+              <span id="income-sum" class="suma">Suma przychodów</span>
+            </p>
+
+            <form id="add-income">
+              <input
+                type="text"
+                class="name-income"
+                name="newName"
+                placeholder="za co?"
+              />
+              <input
+                type="number"
+                class="amount-income"
+                name="newAmount"
+                placeholder="Kwota"
+              />
+              <button type="submit" id="submit-income" class="add-btn">
+                Dodaj
+              </button>
+            </form>
+          </div>
+
+          <div class="edit-income">
+            <ul class="income-list"></ul>
+          </div>
+        </div>
+
+        <!-- EXPENSES -->
+        <div class="col">
+          <div id="expenses">
+            <h2>Wydatki</h2>
+
+            <p class="saldo">
+              <span id="expense-sum" class="suma1">Suma wydatków</span>
+            </p>
+
+            <form id="add-expense">
+              <input
+                type="text"
+                class="name-expense"
+                name="newName2"
+                placeholder="za co?"
+              />
+              <input
+                type="number"
+                class="amount-expense"
+                name="newAmount2"
+                placeholder="Kwota"
+              />
+              <button type="submit" id="submit-expense" class="add-btn">
+                Dodaj
+              </button>
+            </form>
+          </div>
+
+          <div class="edit-expense">
+            <ul class="expense-list"></ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
+      src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"
+      referrerpolicy="no-referrer"
     ></script>
+    <script src="project1.js"></script>
   </body>
 </html>
